# plasma

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
notebooks/: args.ipynb  async_flow.ipynb  async_flow_exception.ipynb  chain_dataset.ipynb  data_model.ipynb  daul_dict.ipynb  decorator.ipynb  dependency_injection.ipynb  digraph.ipynb  graph.ipynb  huggingface.ipynb  pipes.ipynb  pool.ipynb  queues.ipynb  readable.ipynb  search_engine.ipynb  stream.ipynb  test_async_flow.ipynb  test_async_flow_exception.ipynb  test_compute_graph.ipynb  test_configs.ipynb  test_decorator.ipynb  test_dependency_injection.ipynb  test_import.ipynb  test_merge_graph.ipynb  test_pipe.ipynb  test_sequential.ipynb  timer.ipynb
plasma/data_model/: __init__.py  base.py  field.py
plasma/functional/: __init__.py  chainer.py  chainer2.py  signature.py
plasma/git/: __init__.py  work_dir.py
plasma/huggingface/: __init__.py  utils.py
plasma/logging/: __init__.py  exception_logger.py  timer.py  traceable_exception.py
plasma/meta/: __init__.py  class_registrator.py  dependency_injector.py  dependency_manager.py  utils.py
plasma/parallel_processing/: __init__.py
plasma/search_engines/: __init__.py  base_indexer.py  candidate_generator.py  engine.py  graph_indexer.py  index.py  overlap_filter_indexer.py  regex_tokenizer.py  segment_indexer.py  token_graph.py  token_matcher.py  token_matcher2.py  topk_indexer.py
plasma/torch/: __init__.py
plasma/torch/data/: adhoc.py  (+6 more)
plasma/utils/: __init__.py  formatter.py  rich.py
scripts/: queues.py  test_torch_queue.py
(+260 files in other folders)
