[project]
name = "plasma"
version = "3.6.4a5"
description = "plasma package for functional, meta and parallel programming"
authors = [
  {name = "jokingbear", email = "nerokid1072@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.2.1",
    "networkx>=3.6",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
]
