[project]
name = "plasma"
version = "3.6.6"
description = "plasma package for functional, meta and parallel programming"
authors = [
  {name = "jokingbear", email = "nerokid1072@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub",
    "networkx",
    "numpy",
    "pandas",
    "pyyaml",
    "scipy",
    "setuptools",
    "tqdm",
]
